# git-metric

./: .gitignore
api/: .env.example  Cargo.toml  index.ts  package.json  types.ts
api/src/: gitlab_client.rs  main.rs  metrics_engine.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/routes/: index.tsx
