[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
tower = "0.4"
futures = "0.3"
dotenvy = "0.15"
once_cell = "1.19"
itertools = "0.14.0"
